# msu_prac

./: README.md
Skipod/: SUPATEST.c  Task_1.cpp  Task_1_With_Parallel.cpp  Task_2.cpp  a.out  test.c  test_1.cpp
mashgraph/Ray_Tracing/prak3/: CMakeLists.txt  Readmy.txt  main.cpp
mashgraph/align_project/include/: align.h
mashgraph/align_project/src/: .align.cpp.swp  align.cpp  main.cpp
mashgraph/template/src/: task2.cpp
python/: AndOr.py  AnyPower.py  CountInt.py  Det4x4.py  DodgsonDet.py  DotsInCircle.py  DummyClass.py  DungeonMap.py  EvalFunction.py  FarGalaxy.py  FilterList.py  GenTriseq.py  GuessABC.py  IntPalindrome.py  IterPi.py  LookSay.py  MaxInt.py  MegaStroka.py  MostPopular.py  NormalDouble.py  PaidStairs.py  ParallelSegments.py  PatternFind.py  SecondMax.py  SectionShuffle.py  SemDescriptor.py  SharedBrain.py  SimpleVector.py  SpiralDigits.py  StrangeDots.py  ThreeSquares.py  TrianglesCmp.py  UnaryNumber.py  YieldFrom.py
server/untitled4/: package.json
server/untitled4/src/: index.js
spetskurs/Dz_1/: list.js  transformation.js
spetskurs/Dz_2/: hw.js  take1.css  tass.html
workspace/.metadata/: version.ini
workspace/BasicUI/: .rds_delta  .sdk_delta.info  BasicUI.wgt  FastPlay.html  NewPlayList.html  NewSettings.html  NewWithBonus.html  NewWithTranslate.html  PLAY.html  config.xml  index.html
workspace/BasicUI/.metadata/: version.ini
workspace/BasicUI/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
workspace/BasicUI/css/: FastPlay.css  NewPlaylist.css  style.css
workspace/BasicUI/js/: FastPlay.js  NewPlayList.js  main.js
(+71 files in other folders)
